[gd_scene load_steps=36 format=2]

[ext_resource path="res://content/caves/helmetextensioncave/HelmetCave.gd" type="Script" id=1]
[ext_resource path="res://content/caves/helmetextensioncave/alpha.png" type="Texture" id=2]
[ext_resource path="res://content/caves/helmetextensioncave/helmetextensioncave_sheet.png" type="Texture" id=3]
[ext_resource path="res://content/shared/Usable.tscn" type="PackedScene" id=4]
[ext_resource path="res://content/gadgets/blastMining/focussed.png" type="Texture" id=5]
[ext_resource path="res://content/sounds/Biomes/Helmet_amb.wav" type="AudioStream" id=6]
[ext_resource path="res://systems/audio/Sound.tscn" type="PackedScene" id=7]
[ext_resource path="res://content/sounds/Events/Helmet.wav" type="AudioStream" id=8]

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 60, 50 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 3 )
region = Rect2( 60, 0, 60, 50 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 3 )
region = Rect2( 120, 0, 60, 50 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 3 )
region = Rect2( 180, 0, 60, 50 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 60, 50 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 3 )
region = Rect2( 300, 0, 60, 50 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 3 )
region = Rect2( 360, 0, 60, 50 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 3 )
region = Rect2( 420, 0, 60, 50 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 3 )
region = Rect2( 480, 0, 60, 50 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 3 )
region = Rect2( 540, 0, 60, 50 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 3 )
region = Rect2( 600, 0, 60, 50 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 3 )
region = Rect2( 660, 0, 60, 50 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 3 )
region = Rect2( 720, 0, 60, 50 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 3 )
region = Rect2( 780, 0, 60, 50 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 3 )
region = Rect2( 840, 0, 60, 50 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 3 )
region = Rect2( 900, 0, 60, 50 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 3 )
region = Rect2( 960, 0, 60, 50 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 3 )
region = Rect2( 1020, 0, 60, 50 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 3 )
region = Rect2( 1080, 0, 60, 50 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 0, 50, 60, 50 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 60, 50, 60, 50 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 120, 50, 60, 50 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 3 )
region = Rect2( 180, 50, 60, 50 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 3 )
region = Rect2( 240, 50, 60, 50 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 3 )
region = Rect2( 300, 50, 60, 50 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 3 )
region = Rect2( 360, 50, 60, 50 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ) ],
"loop": true,
"name": "default",
"speed": 10.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": false,
"name": "empty",
"speed": 10.0
} ]

[node name="HelmetCave" type="Node2D" groups=["saveable", "unstyled"]]
z_index = -40
script = ExtResource( 1 )
biome = "red"

[node name="Sprites" type="Control" parent="."]
margin_right = 72.0
margin_bottom = 72.0

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 36, 36 )
frames = SubResource( 23 )

[node name="FocusMarker" type="Sprite" parent="."]
position = Vector2( 35, 34 )
texture = ExtResource( 5 )

[node name="HelmetTakenSound" parent="." instance=ExtResource( 7 )]
stream = ExtResource( 8 )
volume_db = 7.378
pitch_scale = 1.07
bus = "Mine"
randomVolume = 0.0
randomPitch = 0.0

[node name="Usable" parent="." instance=ExtResource( 4 )]
position = Vector2( 34, 35 )
visibleOnFocus = NodePath("../FocusMarker")

[node name="AmbSound" parent="Usable" instance=ExtResource( 7 )]
stream = ExtResource( 6 )
volume_db = -2.235
pitch_scale = 0.81
bus = "Mine"
randomVolume = 0.0
maxAudibleDistance = 120.0
minAudibleDistance = 36.0
fadeInTime = 0.1
fadeOutTime = 3.0
loop = true

[node name="Tween" type="Tween" parent="."]

[node name="AlphaMap" type="Sprite" parent="."]
visible = false
position = Vector2( 36, 38 )
texture = ExtResource( 2 )
